# bisqt

./: README.md  pyproject.toml  requirements.txt
bisqt/: __init__.py
notebooks/: BoseHubbardHamiltonian_class.ipynb  BoseHubbardHamiltonian_class.py  Eigenvalues_Original_Tapered_Hamiltonians.ipynb  Eigenvalues_image.ipynb  Tapering.ipynb  swap.ipynb
test_notebooks/: B_H_Hamiltonian_2qubits.ipynb  BoseHubbardHamiltonian.ipynb
